--- a/Boatell-v3/Boatell-v3/Base.lproj/Main.storyboard
+++ b/Boatell-v3/Boatell-v3/Base.lproj/Main.storyboard
@@ -368,15 +368,33 @@
                                 <color key="textColor" systemColor="opaqueSeparatorColor" red="0.77647058820000003" green="0.77647058820000003" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="48i-pc-5XG">
+                                <rect key="frame" x="333" y="108" width="40" height="33"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="33" id="Dnz-F3-eGb"/>
+                                    <constraint firstAttribute="width" constant="40" id="Hod-t4-U5w"/>
+                                </constraints>
+                                <state key="normal" image="cart.fill" catalog="system"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZzY-sv-Rmu">
+                                <rect key="frame" x="372" y="113" width="18" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="SSl-Dk-I9f" secondAttribute="bottom" id="6bB-t1-SBo"/>
+                            <constraint firstItem="2ek-p0-Btv" firstAttribute="trailing" secondItem="48i-pc-5XG" secondAttribute="trailing" constant="41" id="AbO-h7-3MH"/>
                             <constraint firstItem="SSl-Dk-I9f" firstAttribute="trailing" secondItem="2ek-p0-Btv" secondAttribute="trailing" id="BFk-82-Jxm"/>
+                            <constraint firstItem="48i-pc-5XG" firstAttribute="top" secondItem="2ek-p0-Btv" secondAttribute="top" constant="20" id="P9o-N4-wTO"/>
                             <constraint firstItem="SSl-Dk-I9f" firstAttribute="top" secondItem="Zwz-pa-iWD" secondAttribute="top" id="Q5f-NX-nto"/>
                             <constraint firstItem="Djz-rm-NuC" firstAttribute="top" secondItem="2ek-p0-Btv" secondAttribute="top" constant="20" id="W3z-PI-EXF"/>
+                            <constraint firstItem="ZzY-sv-Rmu" firstAttribute="top" secondItem="2ek-p0-Btv" secondAttribute="top" constant="25" id="Zxd-P0-jQX"/>
                             <constraint firstItem="SSl-Dk-I9f" firstAttribute="leading" secondItem="2ek-p0-Btv" secondAttribute="leading" id="emH-lD-qbg"/>
                             <constraint firstItem="Djz-rm-NuC" firstAttribute="leading" secondItem="2ek-p0-Btv" secondAttribute="leading" constant="20" id="epD-ra-UTV"/>
+                            <constraint firstItem="2ek-p0-Btv" firstAttribute="trailing" secondItem="ZzY-sv-Rmu" secondAttribute="trailing" constant="24" id="lQp-V7-TIN"/>
                             <constraint firstItem="2ek-p0-Btv" firstAttribute="trailing" secondItem="Djz-rm-NuC" secondAttribute="trailing" constant="20" id="x6G-li-jXD"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="2ek-p0-Btv"/>
@@ -384,6 +402,8 @@
                     <tabBarItem key="tabBarItem" title="Services" image="square.and.pencil" catalog="system" selectedImage="square.and.pencil" id="Aw8-0W-zUg"/>
                     <navigationItem key="navigationItem" id="jTL-zQ-9WI"/>
                     <connections>
+                        <outlet property="cartButton" destination="48i-pc-5XG" id="0jM-J9-47T"/>
+                        <outlet property="cartIntAmount" destination="ZzY-sv-Rmu" id="eXH-m5-IqQ"/>
                         <segue destination="s9f-Xa-j5a" kind="presentation" identifier="ShowServiceDetailSegue" id="1JC-s8-BWc"/>
                     </connections>
                 </viewController>
@@ -3107,7 +3127,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="lqr-pd-yud"/>
+        <segue reference="1JC-s8-BWc"/>
         <segue reference="Fug-eP-TlZ"/>
         <segue reference="qA5-S4-8KW"/>
         <segue reference="3NT-K1-ekO"/>
@@ -3121,6 +3141,7 @@
         <image name="book.circle.fill" catalog="system" width="128" height="121"/>
         <image name="calendar" catalog="system" width="128" height="106"/>
         <image name="camera.viewfinder" catalog="system" width="128" height="114"/>
+        <image name="cart.fill" catalog="system" width="128" height="102"/>
         <image name="message.circle" catalog="system" width="128" height="121"/>
         <image name="message.fill" catalog="system" width="128" height="113"/>
         <image name="pencil.circle" catalog="system" width="128" height="121"/>
