--- a/Boatell-v3/Boatell-v3/Base.lproj/Main.storyboard
+++ b/Boatell-v3/Boatell-v3/Base.lproj/Main.storyboard
@@ -375,6 +375,9 @@
                                     <constraint firstAttribute="width" constant="40" id="Hod-t4-U5w"/>
                                 </constraints>
                                 <state key="normal" image="cart.fill" catalog="system"/>
+                                <connections>
+                                    <action selector="cartButtonTapped:" destination="HKl-lA-6Kt" eventType="touchUpInside" id="nsl-Pl-DgZ"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZzY-sv-Rmu">
                                 <rect key="frame" x="372" y="113" width="18" height="21"/>
@@ -405,6 +408,7 @@
                         <outlet property="cartButton" destination="48i-pc-5XG" id="0jM-J9-47T"/>
                         <outlet property="cartIntAmount" destination="ZzY-sv-Rmu" id="eXH-m5-IqQ"/>
                         <segue destination="s9f-Xa-j5a" kind="presentation" identifier="ShowServiceDetailSegue" id="1JC-s8-BWc"/>
+                        <segue destination="p3B-Tr-aI7" kind="show" identifier="CartSegue" id="0sP-aK-QS0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Hdb-le-URu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -3127,10 +3131,10 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="1JC-s8-BWc"/>
         <segue reference="Fug-eP-TlZ"/>
         <segue reference="qA5-S4-8KW"/>
         <segue reference="3NT-K1-ekO"/>
+        <segue reference="0sP-aK-QS0"/>
         <segue reference="3rb-88-5PJ"/>
     </inferredMetricsTieBreakers>
     <resources>
